--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>ESPER SCHOOL</title>
+    <meta charset="utf-8">
      <style>
       body {
         margin: 0;
       }
       /* Add your flexbox CSS below here */
+    <link href="css/common.css" rel="stylesheet" type="text/css" media="screen and (min-width:0px) and (max-width:480px)">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
      
     </style>
   </head>
-  <body>      
-    <img
-         src="https://gdurl.com/oj7T" 
-         style="max-width:100%; height:auto; display:block;"
-         />
-    <!-- <p>이런건 다 지울 것!!! 가로폭은 언제나 100%인데 상좌우 여백이 생긴다ㅜ 높이는 자동맞춤</p> -->
-    
+  <body>     
+    <div class="container">      
+      <picture>
+        <source srcset="https://drive.google.com/uc?id=1a2Fjwb_6olM-Vq3DXRAV8yGQgrIvD9aG" media="all and (max-width: 600px)">
+        <img 
+             src="https://drive.google.com/uc?id=1Kz_gkJncYJ-YvtPtfP9by5rTNeRKLjZz" 
+             style="max-width:100%; height:auto; vertical-align: top; display:block;"
+             class="image" />
+      </picture> 
+</div>
   </body>
   <p>
     <a href="https://whitepaper.zodium.io/" target="_blank" rel="noopener noreferrer">Whitepaper</a> / 
     <a href="https://twitter.com/zodium" target="_blank" rel="noopener noreferrer">Twitter</a> / 
     <a href="https://medium.com/@zodium" target="_blank" rel="noopener noreferrer">Medium</a>
   </p>
-  <!-- <p>noopener noreferrer 이거 둘 다 사용하래서.</p> -->
   <p>ⓒ2021 NUKING. ALL RIGHTS RESERVED.</p>
-  
 </html>
