--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <picture>
       <!-- 16:9 를 기준으로 더 넓은 영역에만 적용 "<source media="(min-aspect-ratio:16/9)" -->
       <!-- style로 가운데 정렬 16:9 를 기준으로 더 넓은 영역에만 적용 : "style="display: block; margin: 0 auto;" -->
-      <source media="(min-aspect-ratio:16/9)" srcset="https://gdurl.com/oj7T" style="display: block; margin: 0 auto; border: none; width: 100%;">
-      <source media="(max-aspect-ratio:16/9)" srcset="https://drive.google.com/uc?id=1s15M-giLZX_-mUpAEgCg7R2MIfr7pSqs" style="border: none; height: 90%;">
+      <source media="(min-aspect-ratio:16/9)" srcset="https://drive.google.com/uc?id=1obxJcXArsnnLPfnF0DqMRAAW39JXHSVR" style="display: block; margin: 0 auto; border: none; width: 100%;">
+      <source media="(max-aspect-ratio:16/9)" srcset="https://drive.google.com/uc?id=1QKd8Jg5reFpFyidRhIz04snUf0TG4wxq" style="border: none; height: 90%;">
 
       <!-- 위의 모든 경우가 아닌 경우 적용 -->
       <img src="https://drive.google.com/uc?id=1s15M-giLZX_-mUpAEgCg7R2MIfr7pSqs" style="border: none; width: 100%;">
